--- a/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp_cpp.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalysisTestApp/FaceSentimentAnalysisTestApp_cpp.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>FaceSentimentAnalysisTestApp</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.18870.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.18870.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -138,8 +138,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview">
-      <Version>0.5.2.12</Version>
+    <PackageReference Include="Contoso.FaceSentimentAnalyzer_CPP">
+      <Version>0.0.0.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.3</Version>
@@ -147,12 +147,6 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>5.1.0</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\cpp\FaceSentimentAnalyzer\Contoso.FaceSentimentAnalyzer.vcxproj">
-      <Project>{e0320926-075f-46fc-9cc0-865b635bb1a1}</Project>
-      <Name>Contoso.FaceSentimentAnalyzer</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
