modified and cleanup win32 cpp console app.

--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysis_cpp/FaceSentimentAnalysis_cpp.vcxproj
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysis_cpp/FaceSentimentAnalysis_cpp.vcxproj
@@ -173,13 +173,17 @@
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FaceSentimentAnalysis_cpp.cpp" />
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="app.manifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="App.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
