--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysis_cpp/FaceSentimentAnalysis_cpp.vcxproj.filters
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalysis_cpp/FaceSentimentAnalysis_cpp.vcxproj.filters
@@ -15,14 +15,22 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="FaceSentimentAnalysis_cpp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="app.manifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="App.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="App.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
