Add image file frame source

--- a/samples/ObjectDetectorSample/ObjectDetectorSample.csproj
+++ b/samples/ObjectDetectorSample/ObjectDetectorSample.csproj
@@ -121,6 +121,7 @@
     <Compile Include="BoundingBoxRenderer.cs" />
     <Compile Include="FrameSource\IFrameSource.cs" />
     <Compile Include="FrameSource\FrameReaderFrameSource.cs" />
+    <Compile Include="FrameSource\ImageFileFrameSource.cs" />
     <Compile Include="FrameSource\MediaPlayerFrameSource.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
