--- a/samples/SentimentAnalyzerCustomSkill/cpp/CustomSkillExecutionDevice/CustomSkillExecutionDevice.vcxproj
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/CustomSkillExecutionDevice/CustomSkillExecutionDevice.vcxproj
@@ -66,7 +66,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup>
+    <OutDir>$(ProjectDir)$(Platform)\$(Configuration)\$(RootNamespace)\</OutDir>
+    <IntDir>$(Platform)\$(Configuration)\</IntDir>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
