--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalyzer/packages.config
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalyzer/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Contoso.CustomSkillExecutionDevice" version="0.0.0.1" targetFramework="native" />
+  <package id="Microsoft.AI.Skills.SkillInterfacePreview" version="0.5.2.14" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="1.0.190205.2" targetFramework="native" />
 </packages>
