Updated projects to reflect new namespace for DXCoreExecutionDevice Updated README and docs with notes on VPU support

--- a/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer.vcxproj
+++ b/samples/SentimentAnalyzerCustomSkill/cpp/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer.vcxproj
@@ -189,7 +189,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.14\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets" Condition="Exists('..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.14\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets')" />
-    <Import Project="..\packages\Contoso.CustomSkillExecutionDevice.0.0.0.1\build\native\Contoso.CustomSkillExecutionDevice.targets" Condition="Exists('..\packages\Contoso.CustomSkillExecutionDevice.0.0.0.1\build\native\Contoso.CustomSkillExecutionDevice.targets')" />
+    <Import Project="..\packages\Microsoft.AI.Skills.DXCoreExecutionDevice.0.0.0.1-experimental\build\native\Microsoft.AI.Skills.DXCoreExecutionDevice.targets" Condition="Exists('..\packages\Microsoft.AI.Skills.DXCoreExecutionDevice.0.0.0.1-experimental\build\native\Microsoft.AI.Skills.DXCoreExecutionDevice.targets')" />
     <Import Project="..\packages\Microsoft.Windows.CppWinRT.1.0.190211.5\build\native\Microsoft.Windows.CppWinRT.targets" Condition="Exists('..\packages\Microsoft.Windows.CppWinRT.1.0.190211.5\build\native\Microsoft.Windows.CppWinRT.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -197,7 +197,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.14\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.AI.Skills.SkillInterfacePreview.0.5.2.14\build\native\Microsoft.AI.Skills.SkillInterfacePreview.targets'))" />
-    <Error Condition="!Exists('..\packages\Contoso.CustomSkillExecutionDevice.0.0.0.1\build\native\Contoso.CustomSkillExecutionDevice.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Contoso.CustomSkillExecutionDevice.0.0.0.1\build\native\Contoso.CustomSkillExecutionDevice.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.AI.Skills.DXCoreExecutionDevice.0.0.0.1-experimental\build\native\Microsoft.AI.Skills.DXCoreExecutionDevice.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.AI.Skills.DXCoreExecutionDevice.0.0.0.1-experimental\build\native\Microsoft.AI.Skills.DXCoreExecutionDevice.targets'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Windows.CppWinRT.1.0.190211.5\build\native\Microsoft.Windows.CppWinRT.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Windows.CppWinRT.1.0.190211.5\build\native\Microsoft.Windows.CppWinRT.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Windows.CppWinRT.1.0.190211.5\build\native\Microsoft.Windows.CppWinRT.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Windows.CppWinRT.1.0.190211.5\build\native\Microsoft.Windows.CppWinRT.targets'))" />
   </Target>
