--- a/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer.csproj
+++ b/samples/SentimentAnalyzerCustomSkill/cs/FaceSentimentAnalyzer/Contoso.FaceSentimentAnalyzer.csproj
@@ -130,7 +130,7 @@
       <Version>0.5.2.14</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AI.Skills.SkillInterfacePreview.DXCoreExtension">
-      <Version>0.0.0.1-experimental</Version>
+      <Version>0.0.1-pre</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.8</Version>
